--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <h2>FND17について</h2>
     <div id="container3">
       <p>個性的なメンバーが多い？？</p>
+      <p>「コウタ」が多い。。。</p>
       <p>ペアプロでは皆さんに優しく教えて頂けました。</p>
       <p>リモートでの顔出しはあまりやらないので最初は緊張しました。</p>
       <p>恥ずかしくて中々サムズアップとかできなくてすみません。</p>
